objects/Building__c/fields/BldgID__c.field-meta.xml
<CustomField>
    <fullName>BldgID__c</fullName>
    <description>Numerical external ID</description>
    <externalId>true</externalId>
    <label>GR BldgID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>