objects/Building__c/fields/Building_Assigned_AE__c.field-meta.xml
<CustomField>
    <fullName>Building_Assigned_AE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to the user for AE assigned to Building</description>
    <label>Building Assigned AE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Buildings</relationshipName>
    <type>Lookup</type>
</CustomField>