objects/Building__c/fields/Building_Category__c.field-meta.xml
<CustomField>
    <fullName>Building_Category__c</fullName>
    <label>Building Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BUILDING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>