objects/Building__c/fields/Building_CLLI__c.field-meta.xml
<CustomField>
    <fullName>Building_CLLI__c</fullName>
    <label>Building CLLI</label>
    <length>8</length>
    <type>Text</type>
</CustomField>