objects/Building__c/fields/Building_Tenants_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Building_Tenants_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Building Tenants Uploaded</label>
    <type>Checkbox</type>
</CustomField>