objects/Building__c/fields/Building_Type__c.field-meta.xml
<CustomField>
    <fullName>Building_Type__c</fullName>
    <label>Building Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Meet Point</fullName>
            </value>
            <value>
                <fullName>Commercial Building</fullName>
            </value>
            <value>
                <fullName>ILEC LSO</fullName>
            </value>
            <value>
                <fullName>ILEC LSO: Collocated</fullName>
            </value>
            <value>
                <fullName>ILEC Remote Switch</fullName>
            </value>
            <value>
                <fullName>Wireless MSC</fullName>
            </value>
            <value>
                <fullName>Wireless Tower</fullName>
            </value>
            <value>
                <fullName>Integra Hut/Shelter</fullName>
            </value>
            <value>
                <fullName>Pending Build</fullName>
            </value>
            <value>
                <fullName>Carrier POP</fullName>
            </value>
            <value>
                <fullName>Data Center</fullName>
            </value>
            <value>
                <fullName>Integra Switch/Hub</fullName>
            </value>
            <value>
                <fullName>Carrier Hotel</fullName>
            </value>
            <value>
                <fullName>ILEC LSO: Off Footprint</fullName>
            </value>
            <value>
                <fullName>ILEC LSO: Extended Special</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>