objects/Building__c/fields/Business_Count__c.field-meta.xml
<CustomField>
    <fullName>Business_Count__c</fullName>
    <description>Count of GR Businesses in this Building</description>
    <label>Business Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>