objects/Building__c/fields/Competitive_10G_AutoAugment__c.field-meta.xml
<CustomField>
    <fullName>Competitive_10G_AutoAugment__c</fullName>
    <label>Competitive 10G AutoAugment</label>
    <summaryFilterItems>
        <field>Building_Access_Availability__c.Name</field>
        <operation>equals</operation>
        <value>10G CE Ring</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Building_Access_Availability__c.Status__c</field>
        <operation>equals</operation>
        <value>Auto-Augment</value>
    </summaryFilterItems>
    <summaryForeignKey>Building_Access_Availability__c.Building__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>