objects/Building__c/fields/Dormant_Building__c.field-meta.xml
<CustomField>
    <fullName>Dormant_Building__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To identify onnet buildings where there are no active customers for prospecting</description>
    <label>Dormant Building</label>
    <type>Checkbox</type>
</CustomField>