objects/Building__c/fields/EoF__c.field-meta.xml
<CustomField>
    <fullName>EoF__c</fullName>
    <label>EoF</label>
    <summaryFilterItems>
        <field>Building_Access_Availability__c.Name</field>
        <operation>equals</operation>
        <value>EoF</value>
    </summaryFilterItems>
    <summaryForeignKey>Building_Access_Availability__c.Building__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>