objects/Building__c/fields/Estimated_Building_Penetration__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Building_Penetration__c</fullName>
    <description>Estimated Building Penetration</description>
    <label>Estimated Building Penetration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>