objects/Building__c/fields/House_Number__c.field-meta.xml
<CustomField>
    <fullName>House_Number__c</fullName>
    <description>Address component: House Number</description>
    <label>House Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>