objects/Building__c/fields/HurdleRate__c.field-meta.xml
<CustomField>
    <fullName>HurdleRate__c</fullName>
    <label>Hurdle Rate</label>
    <summarizedField>Building_Access_Availability__c.Minimum_Required_Revenue__c</summarizedField>
    <summaryFilterItems>
        <field>Building_Access_Availability__c.Minimum_Required_Revenue__c</field>
        <operation>notEqual</operation>
        <value/>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Building_Access_Availability__c.Minimum_Required_Revenue__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Building_Access_Availability__c.Building__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>