objects/Building__c/fields/In_Market__c.field-meta.xml
<CustomField>
    <fullName>In_Market__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to define if LSO (and mapped buildings) reside within Integra Footprint or outside. Used to evaluate on footprint/off footprint definition.</description>
    <label>In Market</label>
    <type>Checkbox</type>
</CustomField>