objects/Building__c/fields/Is_Serving_LSO__c.field-meta.xml
<CustomField>
    <fullName>Is_Serving_LSO__c</fullName>
    <formula>IF(CASE(Building_Type__c, &#39;ILEC LSO: Collocated&#39;, 1, &#39;ILEC Remote Switch&#39;, 1, &#39;ILEC LSO: Extended&#39;, 1, &#39;ILEC LSO: Extended Special&#39;, 1,&#39;ILEC LSO: Off Footprint&#39;,1, &#39;Integra Switch/Hub&#39;,1, &#39;ILEC Remote Terminal&#39;,1,0) = 1, &#39;true&#39;, &#39;false&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Serving LSO</label>
    <type>Text</type>
</CustomField>