objects/Building__c/fields/LSO_Rate_Centre__c.field-meta.xml
<CustomField>
    <fullName>LSO_Rate_Centre__c</fullName>
    <formula>Serving_LSO__r.Rate_Centre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LSO Rate Centre</label>
    <type>Text</type>
</CustomField>