objects/Building__c/fields/Market_Area_ID__c.field-meta.xml
<CustomField>
    <fullName>Market_Area_ID__c</fullName>
    <formula>IF(Market_Area__c != &#39;&#39;,  Market_Area__c, Serving_LSO__r.Market_Area__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Area ID</label>
    <type>Text</type>
</CustomField>