objects/Building__c/fields/Market_Area_Name__c.field-meta.xml
<CustomField>
    <fullName>Market_Area_Name__c</fullName>
    <formula>IF( Market_Area__r.Name != &#39;&#39;, Market_Area__r.Name,  Serving_LSO__r.Market_Area__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Area Name</label>
    <type>Text</type>
</CustomField>