objects/Building__c/fields/Net_Classification__c.field-meta.xml
<CustomField>
    <fullName>Net_Classification__c</fullName>
    <label>Net Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>eNNI</fullName>
            </value>
            <value>
                <fullName>ILEC</fullName>
            </value>
            <value>
                <fullName>Near-net</fullName>
            </value>
            <value>
                <fullName>Off-net</fullName>
            </value>
            <value>
                <fullName>On-net</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>