objects/Building__c/fields/Network_Ready__c.field-meta.xml
<CustomField>
    <fullName>Network_Ready__c</fullName>
    <label>Network Ready</label>
    <type>Date</type>
</CustomField>