objects/Building__c/fields/No_Regrets_LSO__c.field-meta.xml
<CustomField>
    <fullName>No_Regrets_LSO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this to flag this LSO as a &quot;No Regrets LSO&quot;.</description>
    <label>Clink LSO</label>
    <type>Checkbox</type>
</CustomField>