objects/Building__c/fields/Post_Directional__c.field-meta.xml
<CustomField>
    <fullName>Post_Directional__c</fullName>
    <description>Address Component: Post Directional</description>
    <inlineHelpText>Use abbreviation: e.g. &quot;SW&quot; instead of &quot;Southwest&quot;</inlineHelpText>
    <label>Post Directional</label>
    <length>4</length>
    <type>Text</type>
</CustomField>