objects/Building__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>Address Component: Zip</description>
    <label>Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>