objects/Building__c/fields/Rate_Centre__c.field-meta.xml
<CustomField>
    <fullName>Rate_Centre__c</fullName>
    <description>Rate Centre of the LSO</description>
    <label>Rate Centre</label>
    <length>30</length>
    <type>Text</type>
</CustomField>