objects/Building__c/fields/Requal_Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requal_Requestor__c</fullName>
    <label>Requal Requestor</label>
    <type>Email</type>
</CustomField>