objects/Building__c/fields/Retail_MRR__c.field-meta.xml
<CustomField>
    <fullName>Retail_MRR__c</fullName>
    <description>Used to track CAPEX</description>
    <inlineHelpText>Used to track CAPEX</inlineHelpText>
    <label>Retail MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>