objects/Building__c/fields/Sales_Priority__c.field-meta.xml
<CustomField>
    <fullName>Sales_Priority__c</fullName>
    <label>Sales Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>