objects/Building__c/fields/Serving_LSO__c.field-meta.xml
<CustomField>
    <fullName>Serving_LSO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Serving LSO</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Invalid serving LSO - Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Building__c.Is_Serving_LSO__c</field>
            <operation>equals</operation>
            <value>true</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Building__c</referenceTo>
    <relationshipLabel>Buildings (Serving LSO)</relationshipLabel>
    <relationshipName>Buildings</relationshipName>
    <type>Lookup</type>
</CustomField>