objects/Building__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>New - Newly entered and awaiting verification
Validated - Validated against duplicates and assigned a CLLI Code
Build Approved - Optional, Capital Allocated
Pending Build - Optional, ESO Initiated
Active - Ready to provide services</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>Build Approved</fullName>
            </value>
            <value>
                <fullName>Pending Build</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Profiled</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>