objects/Building__c/fields/Subscriber_MRC__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_MRC__c</fullName>
    <label>Subscriber MRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>