objects/Building__c/fields/Suffix__c.field-meta.xml
<CustomField>
    <fullName>Suffix__c</fullName>
    <description>Address Component: Street suffix</description>
    <inlineHelpText>Use abbreviation; e.g. &quot;BLVD&quot; instead of &quot;Boulevard&quot;</inlineHelpText>
    <label>Suffix</label>
    <length>4</length>
    <type>Text</type>
</CustomField>