objects/Building__c/fields/Tax_Main_Address_Format__c.field-meta.xml
<CustomField>
    <fullName>Tax_Main_Address_Format__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Main Address Format</label>
    <referenceTo>Building_Address_Format__c</referenceTo>
    <relationshipLabel>Buildings (Tax Main Address Format)</relationshipLabel>
    <relationshipName>Buildings</relationshipName>
    <type>Lookup</type>
</CustomField>