objects/Building__c/fields/Tenant_Count__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Count__c</fullName>
    <description>Number of Tenants in this Building</description>
    <inlineHelpText>Number of Tenants in this Building</inlineHelpText>
    <label>Tenant Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>