objects/Building__c/fields/Tenant_Profile__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Profile__c</fullName>
    <label>Tenant Profile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single Tenant</fullName>
            </value>
            <value>
                <fullName>5+</fullName>
            </value>
            <value>
                <fullName>2 to 5</fullName>
            </value>
            <value>
                <fullName>2-5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>