objects/Building__c/fields/Zip4__c.field-meta.xml
<CustomField>
    <fullName>Zip4__c</fullName>
    <label>Zip+4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>