objects/Building__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <description>Indicates the &quot;zone&quot; the LSO CLLI for the building is in.</description>
    <label>Zone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>