objects/Building__c/recordTypes/Core_Building.recordType-meta.xml
<RecordType>
    <fullName>Core_Building</fullName>
    <active>true</active>
    <label>Core Building</label>
</RecordType>