objects/Building__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Net_Classification__c</columns>
    <columns>Building_Type__c</columns>
    <columns>Building_CLLI__c</columns>
    <columns>Status__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>City__c</field>
        <operation>equals</operation>
        <value>houston</value>
    </filters>
    <label>All</label>
</ListView>