objects/Building__c/listViews/ALL_Target_Near_Net.listView-meta.xml
<ListView>
    <fullName>ALL_Target_Near_Net</fullName>
    <columns>State__c</columns>
    <columns>City__c</columns>
    <columns>NAME</columns>
    <columns>HurdleRate__c</columns>
    <columns>GeoResults_Building_Business_Count__c</columns>
    <columns>GeoResults_Building_Tel_Spend__c</columns>
    <columns>Point_of_Profitability__c</columns>
    <columns>Subscriber_MRC__c</columns>
    <columns>Building_Assigned_AE__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Net_Classification__c</field>
        <operation>equals</operation>
        <value>Near-net</value>
    </filters>
    <filters>
        <field>HurdleRate__c</field>
        <operation>equals</operation>
        <value>350</value>
    </filters>
    <label>ALL Target Near Net</label>
</ListView>