objects/Building__c/listViews/ILEC_LSO_Colo.listView-meta.xml
<ListView>
    <fullName>ILEC_LSO_Colo</fullName>
    <columns>NAME</columns>
    <columns>LSO_CLLI__c</columns>
    <columns>Building_Type__c</columns>
    <columns>Zone__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Building_Type__c</field>
        <operation>equals</operation>
        <value>ILEC LSO: Collocated</value>
    </filters>
    <label>ILEC LSO Colo</label>
</ListView>