objects/Building__c/listViews/KIM_S_ILEC_LSO_LISt.listView-meta.xml
<ListView>
    <fullName>KIM_S_ILEC_LSO_LISt</fullName>
    <columns>NAME</columns>
    <columns>Building_CLLI__c</columns>
    <columns>Building_Alias__c</columns>
    <columns>Address__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>EoC__c</columns>
    <columns>EoF__c</columns>
    <columns>EoNNI__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Building_Type__c</field>
        <operation>equals</operation>
        <value>ILEC LSO: Collocated</value>
    </filters>
    <label>CARRIER RELATIONS ILEC LSO LIST</label>
    <sharedTo>
        <group>Legal_Users</group>
    </sharedTo>
</ListView>