objects/Building__c/listViews/LoopQual_Notifications_Building.listView-meta.xml
<ListView>
    <fullName>LoopQual_Notifications_Building</fullName>
    <filterScope>Queue</filterScope>
    <label>LoopQual Notifications</label>
    <queue>LoopQual_Notifications</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>