objects/Building__c/listViews/Pending_build1.listView-meta.xml
<ListView>
    <fullName>Pending_build1</fullName>
    <columns>NAME</columns>
    <columns>Building_Tel_Spend__c</columns>
    <columns>Market_Area_Name__c</columns>
    <columns>State__c</columns>
    <columns>City__c</columns>
    <columns>Status__c</columns>
    <columns>Building_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Build Approved,Pending Build</value>
    </filters>
    <filters>
        <field>Building_Type__c</field>
        <operation>equals</operation>
        <value>Commercial Building,Carrier POP,Data Center,Carrier Hotel</value>
    </filters>
    <label>ON Pending Build</label>
</ListView>