objects/Building__c/listViews/Pending_build_Landers.listView-meta.xml
<ListView>
    <fullName>Pending_build_Landers</fullName>
    <columns>NAME</columns>
    <columns>Building_Tel_Spend__c</columns>
    <columns>State__c</columns>
    <columns>City__c</columns>
    <columns>Building_CLLI__c</columns>
    <columns>Status__c</columns>
    <columns>Building_Type__c</columns>
    <columns>NearNetLoadDate__c</columns>
    <columns>EoF__c</columns>
    <columns>Net_Classification__c</columns>
    <columns>Market_Area_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Build Approved,Pending Build</value>
    </filters>
    <filters>
        <field>Building_Type__c</field>
        <operation>equals</operation>
        <value>Commercial Building,Carrier POP,Data Center,Carrier Hotel</value>
    </filters>
    <label>ON Pending Build_Landers</label>
    <sharedTo>
        <group>IT_Sales_Enablement</group>
    </sharedTo>
</ListView>