objects/Building__c/listViews/UT_Near_Net_350.listView-meta.xml
<ListView>
    <fullName>UT_Near_Net_350</fullName>
    <columns>NAME</columns>
    <columns>GeoResults_Building_Business_Count__c</columns>
    <columns>GeoResults_Building_Tel_Spend__c</columns>
    <columns>Point_of_Profitability__c</columns>
    <columns>Building_Assigned_AE__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Net_Classification__c</field>
        <operation>equals</operation>
        <value>Near-net</value>
    </filters>
    <filters>
        <field>HurdleRate__c</field>
        <operation>equals</operation>
        <value>350</value>
    </filters>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>UT</value>
    </filters>
    <label>UT Target Near Net</label>
</ListView>