objects/Building__c/listViews/WA_Target_Near_Net.listView-meta.xml
<ListView>
    <fullName>WA_Target_Near_Net</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>GeoResults_Building_Business_Count__c</columns>
    <columns>GeoResults_Building_Tel_Spend__c</columns>
    <columns>Point_of_Profitability__c</columns>
    <columns>Building_Assigned_AE__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Net_Classification__c</field>
        <operation>equals</operation>
        <value>Near-net</value>
    </filters>
    <filters>
        <field>HurdleRate__c</field>
        <operation>equals</operation>
        <value>350</value>
    </filters>
    <filters>
        <field>Market_Area_Name__c</field>
        <operation>equals</operation>
        <value>Washington</value>
    </filters>
    <label>WA Target Near Net</label>
</ListView>